--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <!--
-	Aryel-levy 
+	Solution by GetTemplates.co
+	URL: https://gettemplates.co
 -->
-<html lang="fr">
+<html lang="en">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -16,7 +17,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- custom CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>UI and UX Designer</title>
+    <title>Solution - Free Responsive Agency Template using Bootstrap 4</title>
     <style>
 
     </style>
@@ -46,8 +47,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h1> <span></span>. </h1>
-                <p>  </p>
+                <h1> We promise to bring
+                    the best <span>solution</span> for
+                    your business. </h1>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus turpis nisl. </p>
                 <a href="#">Contact Us <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-md-6">
                 <div class="card"><img class="card-img-top img-fluid" src="images/banner-img.png" alt=""></div>
@@ -87,10 +90,14 @@
                 </div>
             </div>
             <div class="col-md-5">
-                <h2>Créateur digital spécialiste du Brand design et de VFX  </h2>
-                <p>Artiste freelance </p>
+                <h2> We are a Creative Digital
+                    Agency & Marketing Experts </h2>
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus turpis nisl, vitae dictum mi
+                    semper convallis. Ut sapien leo, varius ac dapibus a, cursus quis ante. </p>
                 <p>
-                    <small> promouvoir vos projet ou votre entreprise pour une meilleur visibilité
+                    <small>Nunc sodales lobortis arcu, sit amet venenatis erat placerat a. Donec lacinia magna nulla,
+                        cursus impediet augue egestas id. Suspendisse dolor lectus, pellentesque quis tincidunt ac,
+                        dictum id neque.
                     </small>
                 </p>
                 <a href="#">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
@@ -101,9 +108,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4">
-                <h2>Nos services<br/>
-                   Adapté </h2>
-                <p>chaque client en different c'est pourquoi j'adapte mes prestation a chaque demande </p>
+                <h2> Explore The Services<br/>
+                    We Offer For You </h2>
+                <p> Nunc sodales lobortis arcu, sit amet venenatis erat placerat a. Donec lacinia magna nulla, cursus
+                    impediet augue egestas id. Suspendisse dolor lectus, pellentesque quis tincidunt ac, dictum id
+                    neque. </p>
                 <a href="#">All Services <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-lg-8">
                 <svg id="bg-services"
@@ -124,14 +133,16 @@
                             <div class="oval"><img class="card-img-top" src="images/web-design.png" alt=""></div>
                             <div class="card-body">
                                 <h3 class="card-title">Web Design</h3>
-                                <p class="card-text">Conseevoir vote site web et application mobile de A à Z.</p>
+                                <p class="card-text">Nullam quis libero in lorem accumsan sodales. Nam vel nisi
+                                    eget.</p>
                             </div>
                         </div>
                         <div class="card text-center">
                             <div class="oval"><img class="card-img-top" src="images/marketing.png" alt=""></div>
                             <div class="card-body">
-                                <h3 class="card-title">Marketing digital</h3>
-                                <p class="card-text">Etudier votre secteur d'activité pour mieux choisir votre strategie de communication et de vente</p>
+                                <h3 class="card-title">Marketing</h3>
+                                <p class="card-text">Nullam quis libero in lorem accumsan sodales. Nam vel nisi
+                                    eget.</p>
                             </div>
                         </div>
                     </div>
@@ -139,15 +150,17 @@
                         <div class="card text-center">
                             <div class="oval"><img class="card-img-top" src="images/seo.png" alt=""></div>
                             <div class="card-body">
-                                <h3 class="card-title">Production audio-visuel</h3>
-                                <p class="card-text">Realiser des spot publicitaire professionelle</p>
+                                <h3 class="card-title">SEO</h3>
+                                <p class="card-text">Nullam quis libero in lorem accumsan sodales. Nam vel nisi
+                                    eget.</p>
                             </div>
                         </div>
                         <div class="card text-center">
                             <div class="oval"><img class="card-img-top" src="images/graphics-design.png" alt=""></div>
                             <div class="card-body">
                                 <h3 class="card-title">Graphics Design</h3>
-                                <p class="card-text">Ofrez vous des visuels de qualité</p>
+                                <p class="card-text">Nullam quis libero in lorem accumsan sodales. Nam vel nisi
+                                    eget.</p>
                             </div>
                         </div>
                     </div>
