Update index mon portfolio.html

--- a/index mon portfolio.html
+++ b/index mon portfolio.html
@@ -54,7 +54,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="presentation site@3x.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">PRESENTATION</h2>
 										<p>Directeur Artistique Multimédia
