Update index mon portfolio.html

--- a/index mon portfolio.html
+++ b/index mon portfolio.html
@@ -30,7 +30,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Présentation</a></li>
-								<li><a href="generic.html">Formation</a></li>
+								<li><a href="generic.html">PROFIL</a></li>
 								<li><a href="elements.html">Experience Pro</a></li>
 								<li><a href="#">Competences</a></li>
 								<li><a href="#">Quelques travaux</a></li>
@@ -65,7 +65,7 @@ UX Designer
 Motion Designer
 Web Designer
 Content Manager</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="#" class="special">Plus de details</a>
 									</div>
 								</div>
 							</section>
