--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Présentation</a></li>
-								<li><a href="generic.html">Formation</a></li>
-								<li><a href="elements.html">Experience Pro</a></li>
-								<li><a href="#">Competences</a></li>
+								<li><a href="generic.html">Profil</a></li>
+								<li><a href="elements.html">Competences</a></li>
 								<li><a href="#">Quelques travaux</a></li>
 							</ul>
 							<a href="#" class="close">fermer</a>
@@ -65,7 +64,7 @@ UX Designer
 Motion Designer
 Web Designer
 Content Manager</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="#" class="special">Plus de detail</a>
 									</div>
 								</div>
 							</section>
@@ -73,10 +72,12 @@ Content Manager</p>
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/image2.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">COMPETENCES</h2>
-										<p>effets spéciaux, animation 2D et 3D,Graphisme montage vidéo, Photographie et réalisation
+										<h2 class="major">Profil</h2>
+										<p>Graphiste et motion designer avec des années d'experiences en agence et en freelance
+											spécialiste en UI design, branding de marque, modelisation et animation 3D
+											capable de travailler seul mais surtout en équipe, supporte la pression et les courts delais
 										</p>
 										<a href="#" class="special">Plus de détail</a>
 									</div>
@@ -86,11 +87,14 @@ Content Manager</p>
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/image3.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">COMPETENCES</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<p>Expert UI et UX design
+										modelisateur et animateur 3D pour le cinema et les jeux videos
+										design de marque branding complet à partir d'une identité visuel
+										pilote de drone</p>
+										<a href="#" class="special">Plus de détail</a>
 									</div>
 								</div>
 							</section>
@@ -99,35 +103,37 @@ Content Manager</p>
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Quelques travaux</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<p>Quelques travaux réaliser pour le compte de particuliers et d'entreprises</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/image4.png" alt="" /></a>
 											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<p>-UX design site web Agence chez can
+											-branding complet d'une marque d'épices
+											-Modélisation et animation 3D d'une villa duplexe dans la zone de cocody </p>
+											<a href="#" class="special">Plus de détail</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/image5.png" alt="" /></a>
 											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<p>1</p>
+											<a href="#" class="special">PLus de détail</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/image6.png" alt="" /></a>
 											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<p>2</p>
+											<a href="#" class="special">PLus de détail</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/image7.png" alt="" /></a>
 											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<p>3</p>
+											<a href="#" class="special">PLus de détail</a>
 										</article>
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="#" class="button">Tout visiter</a></li>
 									</ul>
 								</div>
 							</section>
@@ -138,12 +144,12 @@ Content Manager</p>
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Contactez-Moi</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p>Connectez-vous aux canaux suivants</p>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
+										<label for="Nom">Name</label>
+										<input type="Message" name="Nom" id="Nom" />
 									</div>
 									<div class="field">
 										<label for="email">Email</label>
@@ -155,23 +161,22 @@ Content Manager</p>
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
+									<li><input type="submit" value="Envoyer le Message" /></li>
 								</ul>
 							</form>
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									Adresse<br />
+									Abidjan-Côte d'ivoire
+									Cocody-Riviera Palmeraie
 								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								<li class="icon solid fa-phone">(+225) 0787886489</li>
+								<li class="icon solid fa-envelope"><a href="#">alprodci@gmail.com</a></li>
+								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/Ariel levy</a></li>
+								<li class="icon brands fa-instagram"><a href="#">instagram.com/@aryel_levy</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								
 							</ul>
 						</div>
 					</section>
