--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@ Content Manager</p>
 							</section>
 
 						<!-- Four -->
+						<section id="one" class="wrapper spotlight style1">
+								<div class="inner">
+									<a href="#" class="image"><img src="images/image1.png" alt="" /></a>
+									<div class="content">
+										<h2 class="major">PRESENTATION</h2>
+										<p>Directeur Artistique Multimédia
+Graphiste Motion Designer
+Responsable stratégie et innovation de la création
+Infographiste
+UX Designer
+Motion Designer
+Web Designer
+Content Manager</p>
+										<a href="#" class="special">Plus de detail</a>
+									</div>
+								</div>
+							</section>
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Quelques travaux</h2>
