--- a/index.html
+++ b/index.html
@@ -102,17 +102,12 @@ Content Manager</p>
 						<!-- Four -->
 						<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/image1.png" alt="" /></a>
+									<a href="#" class="image"><img src="images/image4.png" alt="" /></a>
 									<div class="content">
-										<h2 class="major">PRESENTATION</h2>
-										<p>Directeur Artistique Multimédia
-Graphiste Motion Designer
-Responsable stratégie et innovation de la création
-Infographiste
-UX Designer
-Motion Designer
-Web Designer
-Content Manager</p>
+										<h2 class="major">Quelques travaux</h2>
+										<p>-UX design site web Agence chez can
+											-branding complet d'une marque d'épices
+											-Modélisation et animation 3D d'une villa duplexe dans la zone de cocody</p>
 										<a href="#" class="special">Plus de detail</a>
 									</div>
 								</div>
