--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Content Manager</p>
 							</section>
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Quelques travaux</h2>
+									<h2 class="major">travaux</h2>
 									<p>Quelques travaux réaliser pour le compte de particuliers et d'entreprises</p>
 									<section class="features">
 										<article>
