--- a/index.html
+++ b/index.html
@@ -115,32 +115,30 @@ Content Manager</p>
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">travaux</h2>
-									<p>Quelques travaux réaliser pour le compte de particuliers et d'entreprises</p>
+									<p>Quelques travaux réalaliser pour de particuliers et des entreprises</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/image4.png" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>-UX design site web Agence chez can
-											-branding complet d'une marque d'épices
-											-Modélisation et animation 3D d'une villa duplexe dans la zone de cocody </p>
+											<a href="#" class="image"><img src="images/image5.png" alt="" /></a>
+											<h3 class="major">1</h3>
+											<p>1</p>
 											<a href="#" class="special">Plus de détail</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/image5.png" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>1</p>
-											<a href="#" class="special">PLus de détail</a>
-										</article>
-										<article>
 											<a href="#" class="image"><img src="images/image6.png" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
+											<h3 class="major">Nisl placerat</h3>
 											<p>2</p>
 											<a href="#" class="special">PLus de détail</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/image7.png" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
+											<h3 class="major">Ante fermentum</h3>
 											<p>3</p>
+											<a href="#" class="special">PLus de détail</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/image8.png" alt="" /></a>
+											<h3 class="major">Fusce consequat</h3>
+											<p>4</p>
 											<a href="#" class="special">PLus de détail</a>
 										</article>
 									</section>
