--- a/index.html
+++ b/index.html
@@ -119,25 +119,25 @@ Content Manager</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/image5.png" alt="" /></a>
-											<h3 class="major">1</h3>
+											<h3 class="major">Agence chez can</h3>
 											<p>1</p>
 											<a href="#" class="special">Plus de détail</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/image6.png" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
+											<h3 class="major">Lilaî épices</h3>
 											<p>2</p>
 											<a href="#" class="special">PLus de détail</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/image7.png" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
+											<h3 class="major">Villa 3D</h3>
 											<p>3</p>
 											<a href="#" class="special">PLus de détail</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/image8.png" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
+											<a href="#" class="image"><img src="images/motion1.mp4" alt="" /></a>
+											<h3 class="major">Motion design</h3>
 											<p>4</p>
 											<a href="#" class="special">PLus de détail</a>
 										</article>
