--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Content Manager</p>
 											<a href="#" class="special">PLus de détail</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/image7.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/image7.jpeg" alt="" /></a>
 											<h3 class="major">Villa 3D</h3>
 											<p>3</p>
 											<a href="#" class="special">PLus de détail</a>
