--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Content Manager</p>
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/image2@3x.png" alt="" /></a>
+									<a href="#" class="image"><img src="images/image2.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Profil</h2>
 										<p>Graphiste et motion designer avec des années d'experiences en agence et en freelance
