--- a/index.html
+++ b/index.html
@@ -120,25 +120,26 @@ Content Manager</p>
 										<article>
 											<a href="#" class="image"><img src="images/image5.png" alt="" /></a>
 											<h3 class="major">Agence chez can</h3>
-											<p>1</p>
+											<p>conception de l'interface,vcodage, achat du nom de domaine et hébergement du site</p>
 											<a href="#" class="special">Plus de détail</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/image6.png" alt="" /></a>
 											<h3 class="major">Lilaî épices</h3>
-											<p>2</p>
+											<p>De la création de l'identité visuel jusqu'à la commercialisation en grande surface,
+											en passant par le branding</p>
 											<a href="#" class="special">PLus de détail</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/image7.jpg" alt="" /></a>
 											<h3 class="major">Villa 3D</h3>
-											<p>3</p>
+											<p>Modélisation et animation de la villa avec autodesk 3DS max et V-Ray</p>
 											<a href="#" class="special">PLus de détail</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/motion1.mp4" alt="" /></a>
+											<a href="#" class="image"><img src="images/motion1.png" alt="" /></a>
 											<h3 class="major">Motion design</h3>
-											<p>4</p>
+											<p>Réalisation de pub avec les logiciels d'animation 2D et 3D</p>
 											<a href="#" class="special">PLus de détail</a>
 										</article>
 									</section>
