--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner">
+					<section id="banner" style="background-image:url(../images/image9.png);">
 						<div class="inner">
 							
 							<h2>UI/UX Designer</h2>
